[package]
name = "mdview"
version = "0.1.0"
authors = ["Richard Dodd <richard.o.dodd@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid" }
once_cell = "1.8.0"
open = "2.0.0"
pulldown-cmark = "0.8.0"
syntect = "4.6.0"
tracing = "0.1.26"
tracing-subscriber = "0.2.19"
